# CAID-tools

./: .gitignore  Dockerfile  Dockerfile.front-end  LICENSE  README.md  gradle.properties  publish.sh  settings.gradle.kts  versions
CAID-front-end/CPS-VO/: build.gradle.kts  build_caid_front_end_docker.sh  compose.yml  create_start_file.py
CAID-front-end/Original/: build.gradle.kts  build_caid_front_end_docker.sh  compose.yml
NoVNC/: README.md  build.gradle.kts  build_novnc_docker.sh  compose.yml
NoVNC/Context/: Dockerfile  chromePreferences
Tutorial/: Tutorial.md
Tutorial/ODG/: CAID.odg
depi-impl/: .gitlab-ci.yml  Dockerfile  README.md  build-vsix.sh  install-and-build-vsix.sh
depi-impl/blackboard-graph/: README.md  package-lock.json  package.json  post_build.js
depi-impl/depi/: .gitignore  README.md  adaptor_api.md  depi_cli.json  depi_config.json  depi_config.json.dolt  depi_design.md  initial_setup.py  test_client.py  test_infer.py  use_cases.md
depi-impl/depi/client/: README.md  build.sh  cli_local.py  compile-py.cmd  pyproject.toml
depi-impl/depi/client/src/depi_client/: bb_client.py  compile-py.sh  depi_cli.py  depi_client.py  depi_load_client.py  depi_load_test.py  depi_loginlogout.py  depi_pub_client.py
depi-impl/depi/client/src/depi_client/configs/: depi_cli.json
depi-impl/depi/monitors/: Dockerfile  compile-py.sh  pyproject.toml  setup.py  start_git_monitor.sh  start_gsn_monitor.sh
depi-impl/depi/monitors/src/depi_monitors/: git_adaptor.py  git_monitor.py  git_verifier.py  gsn_adaptor.py  local_git_repo_monitor.py
depi-impl/depi/monitors/src/gsn_monitor/: get_gsn_updates.py  gsn.tx  gsn_model_parser.py
depi-impl/depi/monitors/src/gsn_monitor/tests/: readme.md
depi-impl/depi/monitors/src/gsn_monitor/tests/multi/: assumptions.gsn  contexts.gsn  ns_contingency.gsn  ns_hardware.gsn
depi-impl/depi/monitors/src/gsn_monitor/tests/single_v2/: model.gsn
depi-impl/depi/monitors/test/: parse_resource_group_url_test.py
depi-impl/depi/server/: Dockerfile  README.md  build.sh  compile-py.cmd  pyproject.toml  run_local.py  setup.cfg
depi-impl/depi/server/src/depi_server/: depi_server.py
depi-impl/depi/server/src/depi_server/auth/: auth.textx  depi_authorization.py
depi-impl/depi/server/src/depi_server/configs/: depi_config_dolt.json  depi_config_mem_notls.json  depi_mysql.sql
depi-impl/depi/server/src/depi_server/db/: depi_db.py  depi_db_dolt.py  depi_db_mem_json.py
depi-impl/depi/server/src/depi_server/model/: depi_model.py
depi-impl/depi/server/src/depi_server/setup/: get_config.py
depi-impl/depi/server/test/: depi_mysql_test.sql  depi_server_test.py  dolt_depi_server_test.py  external_depi_server_test.py  external_dolt_depi_server_test.py  external_memjson_depi_server_test.py  memjson_depi_server_test.py
depi-impl/node-client/: .gitignore  .npmignore  README.md  compile-proto.sh  generateAsyncTypes.js  index.d.ts  index.js  package-lock.json  package.json  (+1 more)
examples/: .env  .gitignore  README.md  create-user-repos.sh  delete-all-data.sh  docker-compose.yml  dump-state.sh  import-depi-dump.sh  import-webgme-dump.sh  push-git-repos.sh  setup.sh
gsn-domain/: .gitlab-ci.yml  Dockerfile  README.md
webgme-depi/: .gitlab-ci.yml  Dockerfile  README.md  build-vsix.sh  install-and-build-vsix.sh
(+315 files in other folders)
